docs/style/main.css
body {
  font-family: 'Arial', 'Helvetica', sans-serif;
  margin: 50px;
}

.hidden {
  display: none;
}

@media (prefers-color-scheme: dark) {
  body {
    background: #181818;
    color: #eeeeee;
  }
  select, option, button {
    background-color: #444444;
    border: 1px outset #686868;
    border-radius: 3px;
    color: #ffffff;
  }
}

